<resources>
    <string name="app_name">Automobile Modification Configurator</string>
    <string name="ui_user_email">Email</string>
    <string name="ui_user_address">Delivery Address</string>
    <string name="ui_user_payment">Payment Method</string>
    <string name="ui_label_default_value">UI_PLACEHOLDER</string>
    <string name="ui_label_default_value_null"> </string>
    <string name="ui_label_default_long_value">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non enim quaero quid verum, sed quid cuique dicendum sit. Cum id fugiunt, re eadem defendunt, quae Peripatetici, verba.
        Et quidem, inquit, vehementer errat; Sed hoc sane concedamus. Sed potestne rerum maior esse dissensio? Duo Reges: constructio interrete.
        Est enim effectrix multarum et magnarum voluptatum.</string>
    <string name="ui_user_section_detail">My Details</string>
    <string name="ui_user_section_collection">Saved Configurations</string>
    <string name="ui_image_description_default">Image</string>
    <string name="ui_main_tap_to_login">TAP TO SIGN IN</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="login_forget_password">Forget Password</string>
    <string name="login_sign_up">Register</string>
    <string name="login_failed">Email doesn\'t exist or password is incorrect.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="dialog_forget_password_instruction">Please enter your email:</string>
    <string name="dialog_forget_password_submit">Submit</string>
    <string name="dialog_forget_password_validate_empty">Email address is empty.</string>
    <string name="dialog_forget_password_invalid">Email address is not valid.</string>
    <string name="dialog_forget_password_requested">Your password will be sent to the email if it is in our database.</string>
    <string name="ui_message_unknown_error">Unknown Error</string>
    <string name="ui_reg_name">Name:</string>
    <string name="ui_reg_address">Address:</string>
    <string name="ui_reg_suburb">Suburb:</string>
    <string name="ui_reg_postcode">Postcode:</string>
    <string name="ui_reg_state">State:</string>
    <string name="ui_reg_country">Country:</string>
    <string name="ui_reg_email">Email:</string>
    <string name="ui_reg_password">Password:</string>
    <string name="ui_reg_confirm_password">Confirm Password:</string>
    <string name="ui_reg_header_login_detail">LOGIN DETAIL</string>
    <string name="ui_reg_contact_detail">CONTACT DETAIL</string>
    <string name="ui_reg_button">REGISTER</string>
    <string-array name="country_values">
        <item>PLEASE SELECT</item>
        <item>AUSTRALIA</item>
        <item>CANADA</item>
        <item>NEW ZEALAND</item>
        <item>UNITED KINGDOM</item>
        <item>UNITED STATES</item>
    </string-array>
    <string name="title_register">Register</string>
    <string name="title_brand">Brands</string>
    <string name="title_model">Models</string>
    <string name="title_badge">Badges</string>
    <string name="title_previewer">Previewer</string>
    <string name="title_checkout">Checkout</string>
    <string name="title_about">About</string>
    <string name="title_account">Account</string>
    <string name="title_order">Order</string>
    <string name="msg_reg_no_name">Please enter your name.</string>
    <string name="msg_reg_no_address">Please enter your address.</string>
    <string name="msg_reg_no_suburb">Please enter your suburb.</string>
    <string name="msg_reg_no_postcode">Please enter your postcode.</string>
    <string name="msg_reg_no_state">Please enter your state.</string>
    <string name="msg_reg_no_country">Please select your country.</string>
    <string name="msg_reg_no_email">Please enter your email address.</string>
    <string name="msg_reg_invalid_email">Invalid email address.</string>
    <string name="msg_reg_no_password">Please enter your password.</string>
    <string name="msg_reg_no_password_confirm">Please confirm your password.</string>
    <string name="msg_reg_invalid_password">Password length should be between 8 and 24.</string>
    <string name="msg_reg_unmatched_password">Password does not match the confirm password.</string>
    <string name="msg_reg_server_error">Email address already exists.</string>
    <string name="msg_reg_server_fail">Server error. Please try later.</string>
    <string name="nav_title_explorer">Explorer</string>
    <string name="nav_title_configurator">Configurator</string>
    <string name="nav_title_dashboard">DASHBOARD</string>
    <string name="nav_title_account">My Account</string>
    <string name="nav_title_orders">Order History</string>
    <string name="nav_title_sign_out">Sign Out</string>
    <string name="nav_title_other">OTHER</string>
    <string name="nav_title_about">About</string>
    <string name="dialog_title_confirmation">Confirmation</string>
    <string name="dialog_msg_logout">Are you sure you want to logout?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_clear">Clear</string>
    <string name="ui_previewer_respray">RESPRAY</string>
    <string name="ui_previewer_bumper">BUMPER</string>
    <string name="ui_previewer_bonnet">BONNET</string>
    <string name="ui_previewer_spoiler">SPOILER</string>
    <string name="ui_previewer_exhaust">EXHAUST</string>
    <string name="ui_previewer_suspension">SUSPENSION</string>
    <string name="ui_previewer_brake">BRAKE</string>
    <string name="ui_previewer_rim">RIM</string>
    <string name="ui_previewer_tyre">TYRE</string>
    <string name="ui_previewer_lighting">LIGHTING</string>
    <string name="menu_previewer_save">Save</string>
    <string name="menu_previewer_checkout">Checkout</string>
    <string name="ui_btn_checkout_pick">Change</string>
    <string name="ui_btn_checkout_change">Change</string>
    <string name="ui_checkout_post">Posts to</string>
    <string name="ui_checkout_address_placeholder">100 Sample Street \n Caulfield East, Victoria 3145 \n Australia</string>
    <string name="ui_checkout_payment_method">Payment Method</string>
    <string name="ui_checkout_service_status">Installation Required</string>
    <string name="msg_checkout_no_item">The cart has no item.</string>
    <string name="msg_checkout_no_login">You need to sign in before the checkout.</string>
    <string name="dialog_map_service_center_header">Available Service Centers</string>
    <string name="dialog_map_service_center_no_access">Please enable the location service.</string>
    <string name="dialog_map_no_rating">No Rating</string>
    <string name="dialog_map_rating">Rating:</string>
    <string name="dialog_map_install_from">Installation Fee from AU</string>
    <string name="ui_list_center_installation">Installation Fee from </string>
    <string name="ui_list_center_installation_currency_aud">AU$</string>
    <string name="ui_list_center_installation_footer"> .00*</string>
    <string name="ui_checkout_service">Service Status</string>
    <string name="ui_checkout_cancel">Cancel</string>
    <string name="dialog_checkout_cancel_booking">Are you sure you wish to cancel the booking? You can pick any other service center before proceed your order.</string>
    <string name="ui_btn_booking_pick_date">Pick Date</string>
    <string name="ui_btn_booking_pick_time">Pick Time</string>
    <string name="ui_btn_booking_confirm">Confirm</string>
    <string name="msg_booking_no_date">Please select the date for installation and service.</string>
    <string name="msg_booking_no_time">Please select the time for installation and service.</string>
    <string name="dialog_timepicker_8am">8:00 AM</string>
    <string name="dialog_timepicker_11am">11:00 AM</string>
    <string name="dialog_timepicker_2pm">2:00 PM</string>
    <string name="ui_previewer_category">CATEGORY</string>
    <string name="ui_account_email_password">Login Information</string>
    <string name="ui_account_delivery_address">Delivery Address</string>
    <string name="ui_account_detail">My Details</string>
    <string name="ui_account_no_payment">No Payment Method</string>
    <string name="ui_btn_account_payment_add">Add</string>
    <string name="ui_btn_account_payment_edit">Edit</string>
    <string name="ui_btn_account_edit">Edit</string>
    <string name="acc_image_category">Option</string>
    <string name="ui_btn_edit_apply">Apply</string>
    <string name="ui_checkout_cart_item">CART</string>
    <string name="ui_payment_payment_type">Payment Type</string>
    <string name="ui_payment_loading">LOADING ...... \n \n</string>
    <string name="dialog_previewer_loading">Loading required assets ......</string>
    <string name="ui_checkout_btn_place_order">PLACE ORDER</string>
    <string name="ui_check_grand_total_placeholder">TOTAL: Calculating...</string>
    <string name="ui_check_grand_total">TOTAL: AU </string>
    <string name="ui_checkout_postage">Postage:</string>
    <string name="ui_checkout_install_fee">Installation Fee:</string>
    <string name="ui_checkout_item_count_placeholder">Items: Calculating...</string>
    <string name="ui_checkout_item_count">Items: </string>
    <string name="ui_checkout_calculate_placeholder">Calculating...</string>
    <string name="ui_checkout_inst_fee_not_apply">Not Applicable</string>
    <string name="ui_postage_free">Free</string>
    <string name="dialog_checkout_process_order">Processing your order...</string>
    <string name="ui_order_processed">ORDER PROCESSED</string>
    <string name="ui_order_instruction">An invoice will be sent to your email address shortly. \n \n Payment methods supported by AMC will be displayed on the invoice. \n \n The transaction will be confirmed once the payment is received. \n \n Please keep a copy of the invoice.</string>
    <string name="ui_order_processed_got_it">Got It</string>
    <string name="ui_about_description"><b>Automobile Modification Configurator</b> is an online shopping application. It provides a 3D renderer for customer to preview the part they want to buy for their beloved vehicles.</string>
    <string name="ui_about_developer">Prototype developed by <b>Yuqi Wang</b></string>
    <string name="ui_about_framework">
        This application integrates <b>LibGDX</b> framework to enable the 3D rendering system.
    </string>
    <string name="ui_about_server">
        The server side is implemented using <b>Slim PHP</b> and <b>MySQL</b>.
    </string>
    <string name="ui_about_library">
        External Libraries:\n
        <b>Picasso</b>\n
        (square.github.io/picasso/) \n
        <b>OkHttp</b>\n
        (square.github.io/okhttp/) \n
        <b>Gson</b>\n
        (github.com/google/gson)
    </string>
    <string name="dialog_tracking_id">Tracking#: </string>
    <string name="dialog_tracking_courier">Courier: </string>
    <string name="dialog_tracking_header_item">Items</string>
    <string name="dialog_tracking_header_tracking_info">Tracking Information</string>
    <string name="dialog_preconfig_budget">Budget:</string>
    <string name="ui_order_id">Order#:</string>
    <string name="unit_km">Km</string>
    <string name="ui_model_available_model">Available Models:</string>
    <string name="ui_badge_available_badge">Available Badges:</string>
    <string name="dialog_hint_password_optional">Optional</string>
    <string name="dialog_hint_password_no_change">Required If Change Password</string>
</resources>