<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_explorer"
            android:icon="@drawable/ic_menu_explorer"
            android:title="@string/nav_title_explorer" />
        <item
            android:id="@+id/nav_configurator"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_title_configurator" />
    </group>

    <group>
        <item android:id="@+id/nav_dashboard"
            android:title="@string/nav_title_dashboard">
            <menu>
                <item
                    android:id="@+id/nav_account"
                    android:icon="@drawable/ic_menu_profile"
                    android:title="@string/nav_title_account" />
                <item
                    android:id="@+id/nav_orders"
                    android:icon="@drawable/ic_menu_orders"
                    android:title="@string/nav_title_orders" />
                <item
                    android:id="@+id/nav_signout"
                    android:icon="@drawable/ic_menu_logout"
                    android:title="@string/nav_title_sign_out" />
            </menu>
        </item>
    </group>

</menu>
