<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/ui_image_description_default"
                app:srcCompat="@drawable/logo_horizontal" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/imageView3"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:text="@string/ui_about_description" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:text="@string/ui_about_framework"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView7"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:text="@string/ui_about_server" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView9"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:text="@string/ui_about_library" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView10"
                android:gravity="center_horizontal"
                android:text="@string/ui_about_developer" />

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>