<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="yuqi.amc.Checkout"
    android:animateLayoutChanges="true">

    <TextView
        android:id="@+id/textViewCheckout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/ui_checkout_post"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/labelCheckoutAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewCheckout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:lines="3"
        android:text="@string/ui_checkout_address_placeholder" />

    <Button
        android:id="@+id/btnCheckoutPickServiceCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/labelCheckoutAddress"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/ui_btn_checkout_pick"
        android:textColor="@android:color/white" />

    <View
        style="@style/Divider"
        android:layout_below="@id/labelCheckoutAddress"
        android:id="@+id/viewCheckout" />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutCheckoutBooking"
        android:layout_below="@+id/viewCheckout">

        <TextView
            android:id="@+id/textViewCheckout2"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/labelCheckoutBookingTime"

            android:text="@string/ui_checkout_service"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/labelCheckoutBookingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewCheckout2"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:lines="3"
            android:text="@string/ui_checkout_address_placeholder" />

        <Button
            android:id="@+id/btnCheckoutCancelBooking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/labelCheckoutBookingTime"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/ui_checkout_cancel"
            android:textColor="@android:color/white" />

        <View
            style="@style/Divider"
            android:layout_below="@id/labelCheckoutBookingTime"
            android:id="@+id/viewCheckout2" />

    </RelativeLayout>




    <TextView
        android:id="@+id/textViewCheckout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutCheckoutBooking"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/ui_checkout_payment_method"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/labelCheckoutPaymentMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_payment_loading"
        android:layout_below="@+id/textViewCheckout3"
        android:layout_alignStart="@+id/textViewCheckout3" />

    <Button
        android:id="@+id/btnCheckoutChangePaymentMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnCheckoutPickServiceCenter"
        android:layout_alignTop="@+id/labelCheckoutPaymentMethod"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/ui_btn_checkout_change"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/sectionHeaderCheckout"
        style="@style/Section"
        android:layout_below="@id/labelCheckoutPaymentMethod"
        android:layout_marginBottom="0dp"
        android:background="?android:attr/colorButtonNormal"
        android:text="@string/ui_checkout_cart_item"
        android:textColor="#666666" />


    <ListView
        android:id="@+id/listCheckoutItems"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sectionHeaderCheckout" />


</RelativeLayout>
