<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:id="@+id/tableLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="0dp"
            android:minHeight="@dimen/height_min">

            <TextView
                android:layout_width="@dimen/ui_edit_label_width"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:labelFor="@+id/textEditEmail"
                android:text="@string/ui_reg_email" />

            <EditText
                android:id="@+id/textEditEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:minHeight="@dimen/height_min">

            <TextView

                android:layout_width="@dimen/ui_edit_label_width"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:labelFor="@+id/textEditPassword"
                android:text="@string/ui_reg_password" />

            <EditText
                android:id="@+id/textEditPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/dialog_hint_password_optional"
                android:inputType="textPassword"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:minHeight="@dimen/height_min">

            <TextView

                android:layout_width="@dimen/ui_edit_label_width"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:labelFor="@+id/textEditConfirmPassword"
                android:text="@string/ui_reg_confirm_password" />

            <EditText
                android:id="@+id/textEditConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/dialog_hint_password_no_change"
                android:inputType="textPassword"
                android:textSize="14sp" />
        </TableRow>


    </TableLayout>

    <Button
        android:id="@+id/btnEditUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/ui_btn_edit_apply"
        android:textColor="@android:color/white" />

</RelativeLayout>