<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="yuqi.amc.OrderInstruction">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/img64"
        android:layout_height="@dimen/img64"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/ui_image_description_default"
        app:srcCompat="@drawable/img_order_processed" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView2"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/ui_order_processed"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnOrderGotIt"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView5"
        android:gravity="center_horizontal"
        android:text="@string/ui_order_instruction" />

    <Button
        android:id="@+id/btnOrderGotIt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/ui_order_processed_got_it"
        android:textColor="@android:color/white" />

</RelativeLayout>
