<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="32dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingTop="32dp">

    <TextView
        android:id="@+id/labelForgetPasswordEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/dialog_forget_password_instruction"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/inputForgetPasswordEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelForgetPasswordEmail"
        android:ems="10"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnForgetPasswordRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/inputForgetPasswordEmail"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/dialog_forget_password_submit"
        android:textColor="@android:color/white" />

</RelativeLayout>